--- a/package.json
+++ b/package.json
@@ -1,11 +1,24 @@
 {
   "name": "@async-be/create-node-lib",
-  "version": "0.0.1",
+  "version": "0.1.0-SNAPSHOT.1",
   "description": "",
-  "bin": "index.js",
+  "bin": "./src/cli.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Coclet Clément",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "inquirer": "^7.1.0",
+    "validate-npm-package-name": "^3.0.0"
+  },
+  "devDependencies": {
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb-base": "^14.1.0",
+    "eslint-plugin-import": "^2.20.2",
+    "prettier": "^2.0.5",
+    "eslint-plugin-prettier": "^3.1.3",
+    "typescript": "^3.7.5",
+    "@types/node": "^13.5.0"
+  }
 }
