--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "@async-be/create-node-lib",
-  "version": "0.1.0-SNAPSHOT.1",
+  "version": "0.1.0-SNAPSHOT.3",
   "description": "",
-  "bin": "./src/cli.js",
+  "bin": "./src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
